# rust-chat

./: Cargo.toml  README.md  todo.md
chat/: chat.txt
src/: chat.rs  fsm.rs  gif.rs  main.rs  message.rs  network.rs  room.rs  state.rs  tenor.rs  ui.rs  user.rs
src/app/: app.rs
src/network/: client.rs  helpers.rs  mod.rs  server.rs  state.rs
src/ui/: app.rs  chat.rs  mod.rs  panels.rs  popups.rs  start.rs
src/user/: state.rs
src/views/: chat.rs  chat_select.rs  mod.rs  select.rs  start.rs  state.rs
