[package]
name = "rust-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
dotenvy = "0.15.7"
eframe = "0.33.0"
egui = "0.33.0"
egui-file-dialog = "0.12.0"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "*", features = ["jpeg", "png"] }
local-ip-address = "0.6.5"
reqwest = { version = "0.12.26", features = ["json"]}
serde = {version = "1.0.228", features = ["rc"]}
serde_json = "1.0.145"
tokio = {version = "1.48.0", features = ["net", "sync", "time", "rt-multi-thread", "macros", "io-util"]}
uuid = {version = "1.18.1", features = ["v4",]}
